<resources>
    <string name="app_name">ChatBox</string>
    <string name="sign_out">Sign out</string>
    <string name="menu_delete">Delete</string>
    <string name="input">Input</string>
    <string name="send">Send</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_chat">Chat</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="username">Username</string>
    <string name="user_username">User Username</string>
    <string name="email">Email</string>
    <string name="user_email">user@email.com</string>
    <string name="update_profile">Update profile</string>
    <string name="profile">Profile</string>
</resources>