<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/profile"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/username" />

    <TextView
        android:id="@+id/user_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/user_username" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/email" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:layout_weight="1"
        android:text="@string/user_email" />

    <TextView
        android:id="@+id/tvTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/theme" />

    <RadioGroup
        android:id="@+id/RGgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="4dp">

        <RadioButton
            android:id="@+id/lightRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:text="@string/light" />

        <RadioButton
            android:id="@+id/darkRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:text="@string/dark" />
    </RadioGroup>

    <Button
        android:id="@+id/updateProfileBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_profile" />

</LinearLayout >